[tool.poetry]
name = "ping-trace-test"
version = "0.1.0"
description = ""
authors = ["Murashu7 <murashu7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
aiofiles = "^24.1.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
